cluster/apps/networking-system/ingresses/base/prowlarr/ingress-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prowlarr.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: secure-headers
        - name: authelia
      services:
        - name: prowlarr
          port: 9696
          namespace: default
  tls:
    secretName: ${SECRET_DOMAIN_0//./-}-prod-tls
